--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --env development"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PajaritoMoyqi/nomad-REACT-React-Hooks-Introduction"
+  },
   "author": "pajaritomoyqi",
   "license": "ISC",
   "dependencies": {
